--- a/tests/shell/CMakeLists.txt
+++ b/tests/shell/CMakeLists.txt
@@ -75,7 +75,7 @@ function (add_scripttest testname)
 		else (TARGET)
 			if (ENABLE_KDB_TESTING)
 			if (NOT ${testname_we} STREQUAL "run_all")
-			if (NOT ${testname_we} STREQUAL "check_gen" OR ENABLE_CXX11)
+			if (NOT ${testname_we} STREQUAL "check_gen")
 			if (BUILD_FULL)
 				set (KDB_COMMAND "${CMAKE_BINARY_DIR}/bin/kdb-full")
 			elseif (BUILD_STATIC)
@@ -102,7 +102,7 @@ function (add_scripttest testname)
 				)
 			#dash does memleak:
 			set_property(TEST testscr_${testname_we} PROPERTY LABELS memleak kdbtests)
-			endif (NOT ${testname_we} STREQUAL "check_gen" OR ENABLE_CXX11)
+			endif (NOT ${testname_we} STREQUAL "check_gen")
 			endif (NOT ${testname_we} STREQUAL "run_all")
 			endif(ENABLE_KDB_TESTING)
 		endif (TARGET)
