include namespaces as man page

--- a/doc/help/CMakeLists.txt
+++ b/doc/help/CMakeLists.txt
@@ -1,12 +1,17 @@
-find_program(RONN_LOC ronn)
+find_program (RONN_LOC ronn)
 
 if (RONN_LOC)
-
-	file (GLOB NAMES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.md)
-	foreach (FULLNAME ${NAMES})
+	file (GLOB KDBNAMES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} kdb*.md)
+	foreach (FULLNAME ${KDBNAMES})
 		get_filename_component (NAME ${FULLNAME} NAME_WE)
 		generate_manpage (${NAME})
 	endforeach ()
-else()
-	message(WARNING "did not find ronn, will not build man pages")
-endif()
+
+	file (GLOB KDBNAMES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} elektra*.md)
+	foreach (FULLNAME ${KDBNAMES})
+		get_filename_component (NAME ${FULLNAME} NAME_WE)
+		generate_manpage (${NAME} SECTION 7)
+	endforeach ()
+else ()
+	message (WARNING "did not find ronn, will not build man pages")
+endif ()
