--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -61,6 +61,7 @@ description = The name and e-mail address of the author of the plugin.
 [system/elektra/modules/_/infos/licence]
 type = string
 status = implemented
+example = BSD
 description = The licence relevant for the user of the plugin.
   For plugins published with Elektra it is "BSD".
   Note that it might be illegal to use some combinations of licences,
@@ -75,6 +76,7 @@ description = The full text describing everything relevant for the
   users, developers or maintainers of this plugin.
   Should be in markdown format with long tutorial-like explanations.
   Use README.md to make the content easily readable and editable.
+  It should use markdown syntax.
   The clause should at least contain:
   - Purpose
   - Possible Usage
