filecheck: cleanup, added testcases

--- a/src/plugins/filecheck/CMakeLists.txt
+++ b/src/plugins/filecheck/CMakeLists.txt
@@ -5,5 +5,5 @@ add_plugin (filecheck
 		filecheck.h
 		filecheck.c
 	)
-
+install(DIRECTORY filecheck DESTINATION ${TARGET_TEST_DATA_FOLDER})
 add_plugintest (filecheck)
