man: add some further docu

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -30,7 +30,18 @@ description = Indicate that symbols are exported.
 type = func
 status = implemented
 description = Allows a plugin to export any functions.
-  Typical names are get, set, error, open, close or checkfile.
+  Typical names are get, set, error, open or close.
+  
+  A plugin can export symbols for external use.  Users of
+  the library can look for these symbols and get a pointer to a function.
+  Other plugins, however, are not supposed to use these symbols.
+  checkfile can be used for resolvers.
+  
+  The name of the symbols can be any valid
+  C name.  It contains a function pointer as value to enable applications to call
+  the function. Given the plugin and symbol's name the function pointer
+  can be accessed by a unique locator in the global key database.
+  
   The usage of such functions will couple plugins or applications
   tightly, so avoid them if possible.
 
@@ -57,6 +68,12 @@ description = Indicate that info is available.
 type = string
 status = implemented
 description = The name and e-mail address of the author of the plugin.
+  It blames the person responsible for the plugin.
+  The plugin must behave as described in the contract.
+  
+  This clause should contain an e-mail address so that direct contact is possible.
+  If you want, you can get an @libelektra.org e-mail address.
+
 
 [system/elektra/modules/_/infos/licence]
 type = string
@@ -68,15 +85,36 @@ description = The licence relevant for the user of the plugin.
   so "BSD" is preferred whenever possible.
   If the plugin links against a library, the library's licence might
   enforce another licence.
+  
+  Note that even if the
+  plugin's code is BSD licenced (Berkeley Software Distribution)
+  but it links against GPL (GNU General Public
+  License) code, the contract needs to say GPL.
+  
+  BSD stands for the simplified, three-clause BSD licence that is used by Elektra itself.
+  For any plugin which does not declare the licence to be BSD currently,
+  a warning will be displayed during the mount process, because the overall
+  licence of the installation concerned may change.
+  The warning might be wrong, if the licence actually is compatible.
 
 [system/elektra/modules/_/infos/description]
 type = string
 status = implemented
 description = The full text describing everything relevant for the
   users, developers or maintainers of this plugin.
-  Should be in markdown format with long tutorial-like explanations.
-  Use README.md to make the content easily readable and editable.
+  Do not duplicate information from other clauses.
+  
+  Explains informally what the plugin does. It
+  should be humanly readable and will not be parsed or checked.  The person
+  reading it should get an idea if, and why, this plugin should be used.
+  This clause is the most important, but not used for the
+  contract's validity.
+  
   It should use markdown syntax.
+  
+  It should contain long tutorial-like explanations.
+  Use README.md to make the content easily readable and editable.
+  
   The clause should at least contain:
   - Purpose
   - Possible Usage
@@ -99,7 +137,15 @@ type = enum
 status = implemented
 description = Introduces a more abstract name (=provider) for the type
   of problem the plugin solves.
-  The enum lists the current known providers, even though any other
+  
+  A plugin indicates that it
+  is a provider for all activities necessary to fulfil
+  a specific mission.  The name already provides users with an
+  understanding what this assignment is.  Together with an informal text
+  (`infos/description?) it exactly describes the responsibilities.
+  Other plugins can utilise this service.
+  
+  The above enum lists (in type) the current known providers, even though any other
   name can be used, too.
   Note, that similar to adding new clauses, usages of prefixes is
   highly recommended to avoid name conflicts with future providers added
@@ -125,7 +171,14 @@ description = gives a list of places in which the plugin must appear.
   During mounting, the algorithm checks if a free slot is available in
   the requested position. Because of this clause the placement works
   automatically.
+  
   The type enumerates the only supported placements.
+  
+  The places are referred to with the names given in
+  [elektra-ordering(7)](/doc/help/elektra-ordering.md).
+  During mounting, the algorithm checks if
+  a free slot is available in the requested position.  Because of this
+  clause the placement works automatically.
 
 
 [system/elektra/modules/_/infos/ordering]
@@ -136,6 +189,7 @@ description = requests that a list of plugins or provided names is not
   the order constraint is violated. Note, that the relation to the
   storage and resolver plugins is already determined using the clause
   placement.
+  
   So it is a simple way to ensure that your plugin will be added before
   the one given with this contract clause.
 
@@ -157,6 +211,14 @@ description = Lists the requirements of the plugin.
   the name of providers.
   Then, any plugin providing the functionality can be used and the
   coupling is reduced.
+  
+  infos/needs is the counterpart of provides.  Using it, plugins
+  delegate some work to other plugins.  They need a provider of a specific
+  service to work properly.  The clause describes that the plugin can
+  only fulfil its work if a specific service is present in the backend.
+  It does not state when the work has to be done.  The clause only declares
+  that such a provider must be present anywhere in the backend.  The name
+  can also directly refer to another plugin's name.
 
 [system/elektra/modules/_/infos/recommends]
 type = string
@@ -167,9 +229,12 @@ description = Recommendations are similar to needs, but the backend
 [system/elektra/modules/_/infos/version]
 type = string
 status = implemented
+example = 1
 description = Exports the plugin version this plugin was compiled
   against. Use the macro PLUGINVERSION in kdbplugin.h for its value.
   The current version is the major version as indicated in this file.
+  
+  The version implies how the plugin interface must look like.
 
 [system/elektra/modules/_/config/needs]
 type = null
@@ -178,50 +243,6 @@ description = Indicates that this plugin exports a configuration it
   needs. All keys below will be propagated to the backend configuration.
   One of the provider should provide this configuration.
 
-
-
-
-
-
-
-
-[system/elektra/modules/_/limitations/relative_key_names]
-type = bool
-status = proposed
-description = Indicates that this plugin has absolute key names and that
-  the file will remember where the keys were.
-  TODO: better name?
-  TODO: combine it with other limitations/capabilities
-
-
-
-
-
-
-#
-# Information about formatting
-#
-
-#
-# Currently there is no uniform way to handle the formatting of a Keys in
-# the written configuration file. This leads to lost or incorrect formatting
-# which can be annoying for the user. This section aims to establish 
-# several metakeys that control the handling of Key formatting
-#
-
-[formatting/blanklinesbefore]
-status= idea
-description= number of blank lines to insert before
-  the key is written to the configuration file
-
-[formatting/blanklinesafter]
-status= idea
-description= number of blank lines to insert after
-  the key is written to the configuration file
-note= both keys may be needed although they partly overlap
-  blanklinesafter is needed for the last key in the configuration file
-  because no following key can use blanklinesbefore instead
-  blanklinesbefore is needed for the first key in the configuration file
-  because no preceeding key can use blanklinesafter instead
-  However, there should be a preference of what to use if both
-  is applicable 
+  It presents the plugin configuration needed so that
+  the plugin works properly. Typically the configuration is not for the
+  plugin itself, but for other needed plugins (in infos/needs)
