debian: add testdata, lua, use swig3.0

--- a/debian/control
+++ b/debian/control
@@ -229,7 +229,7 @@ Description: dbus plugin for a framework to get and set configuration
 Package: libelektra-python4
 Architecture: any
 Depends: libelektra-core4 (>= ${source:Version}),
- swig2.0,
+ swig3.0,
  ${shlibs:Depends},
  ${misc:Depends}
 Description: Python2 bindings for Elektra
@@ -244,6 +244,25 @@ Description: Python2 bindings for Elektra
  leveraging easy application integration.
  .
  This package contains the python2 bindings allowing libelektra integration with python.
+
+Package: libelektra-lua4
+Architecture: any
+Depends: libelektra-core4 (>= ${source:Version}),
+ swig3.0,
+ ${shlibs:Depends},
+ ${misc:Depends}
+Description: Python2 bindings for Elektra
+ Elektra provides a universal and secure framework to store
+ configuration parameters in a global, hierarchical key database. The
+ core is a small library implemented in C. The plugin-based framework
+ fulfills many configuration-related tasks to avoid any unnecessary code
+ duplication across applications while it still allows the core to stay
+ without any external dependency. Elektra abstracts from
+ cross-platform-related issues with an consistent API, and allows
+ applications to be aware of other applications' configurations,
+ leveraging easy application integration.
+ .
+ This package contains the lua bindings allowing libelektra integration with lua.
 
 Package: libelektra-gen
 Architecture: any
