--- a/src/libs/CMakeLists.txt
+++ b/src/libs/CMakeLists.txt
@@ -6,6 +6,8 @@ add_subdirectory (getenv)
 
 add_subdirectory (ease)
 
+add_subdirectory (proposal)
+
 add_subdirectory (elektra)
 
 generate_manpage (elektra-libs FILENAME ${CMAKE_CURRENT_SOURCE_DIR}/README.md SECTION 7)
