--- a/src/libs/elektra/CMakeLists.txt
+++ b/src/libs/elektra/CMakeLists.txt
@@ -57,8 +57,14 @@ set (targets_built)
 SET(__symbols_file ${CMAKE_CURRENT_SOURCE_DIR}/libelektra-symbols.map)
 
 if (BUILD_SHARED)
+	# TODO: move plugin.c
+	file (GLOB KDB_FILES backend.c  kdb.c   mount.c  split.c  trie.c  plugin.c)
+	set (CORE_FILES ${SOURCES})
+	list (REMOVE_ITEM CORE_FILES ${KDB_FILES})
+	set (KDB_FILES  ${KDB_FILES}  ${HDR_FILES})
+
 	get_property (elektra-shared_SRCS GLOBAL PROPERTY elektra-shared_SRCS)
-	add_library (elektra-core SHARED ${SOURCES} ${elektra-shared_SRCS})
+	add_library (elektra-core SHARED ${CORE_FILES} ${elektra-shared_SRCS})
 
 	get_property (elektra-shared_LIBRARIES GLOBAL PROPERTY elektra-shared_LIBRARIES)
 	target_link_libraries (elektra-core ${elektra-shared_LIBRARIES})
@@ -66,13 +72,32 @@ if (BUILD_SHARED)
 	get_property (elektra-shared_INCLUDES GLOBAL PROPERTY elektra-shared_INCLUDES)
 	include_directories (${elektra-shared_INCLUDES})
 
-	set_target_properties (elektra-core PROPERTIES
+
+
+
+	add_library (elektra-kdb SHARED ${KDB_FILES})
+	target_link_libraries (elektra-kdb elektra-core)
+
+
+
+
+	add_library (elektra SHARED)
+	get_property (elektra-extension_LIBRARIES GLOBAL PROPERTY elektra-extension_LIBRARIES)
+	target_link_libraries (elektra elektra-core elektra-kdb ${elektra-extension_LIBRARIES})
+	set_target_properties (elektra PROPERTIES LINKER_LANGUAGE C)
+
+
+
+
+	set (elektra-all_LIBRARIES elektra-core elektra-kdb elektra ${elektra-extension_LIBRARIES})
+	set_target_properties (${elektra-all_LIBRARIES} PROPERTIES
 		COMPILE_DEFINITIONS "HAVE_KDBCONFIG_H"
 		VERSION ${KDB_VERSION} SOVERSION ${SO_VERSION}
 		CLEAN_DIRECT_OUTPUT 1
 	)
+
 	if (${LD_ACCEPTS_VERSION_SCRIPT})
-		set_target_properties (elektra-core PROPERTIES
+		set_target_properties (${elektra-all_LIBRARIES} PROPERTIES
 			LINK_FLAGS "-Wl,--version-script=${__symbols_file}"
 		)
 	endif ()
@@ -82,16 +107,11 @@ if (BUILD_SHARED)
 	#search only in the prefix the user decided to install elektra
 	#(e.g. /usr/local/)
 	set (ELEKTRA_RPATH "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/${TARGET_PLUGIN_FOLDER}")
-	set_target_properties (elektra-core PROPERTIES INSTALL_RPATH "${ELEKTRA_RPATH}")
+	set_target_properties (elektra-kdb PROPERTIES INSTALL_RPATH "${ELEKTRA_RPATH}")
 
-	install (TARGETS elektra-core DESTINATION lib${LIB_SUFFIX} EXPORT ElektraTargetsLibelektra)
+	install (TARGETS elektra-core elektra-kdb elektra DESTINATION lib${LIB_SUFFIX} EXPORT ElektraTargetsLibelektra)
 
-	list (APPEND targets_built elektra-core)
-
-	add_library (elektra SHARED)
-	get_property (elektra-extension_LIBRARIES GLOBAL PROPERTY elektra-extension_LIBRARIES)
-	target_link_libraries (elektra elektra-core ${elektra-extension_LIBRARIES})
-	set_target_properties (elektra PROPERTIES LINKER_LANGUAGE C)
+	list (APPEND targets_built ${elektra-all_LIBRARIES})
 endif (BUILD_SHARED)
 
 if (BUILD_FULL OR BUILD_STATIC)
