--- a/src/libs/meta/CMakeLists.txt
+++ b/src/libs/meta/CMakeLists.txt
@@ -1,16 +1,2 @@
 file (GLOB SOURCES *.c)
-add_headers(SOURCES)
-
-if (BUILD_SHARED)
-	add_library (elektra-meta SHARED ${SOURCES})
-
-	target_link_libraries (elektra-meta elektra-core)
-endif (BUILD_SHARED)
-
-set_property (GLOBAL APPEND PROPERTY "elektra-full_SRCS"
-	${SOURCES}
-	)
-
-set_property (GLOBAL APPEND PROPERTY "elektra-extension_LIBRARIES"
-	elektra-meta
-	)
+add_lib (meta SOURCES ${SOURCES})
