--- a/src/libs/plugin/CMakeLists.txt
+++ b/src/libs/plugin/CMakeLists.txt
@@ -1,2 +1,5 @@
 file (GLOB SOURCES *.c)
-add_lib (plugin SOURCES ${SOURCES})
+add_lib (plugin
+		SOURCES ${SOURCES}
+		LINK_LIBRARIES elektra-kdb
+	)
