--- a/src/plugins/xmltool/CMakeLists.txt
+++ b/src/plugins/xmltool/CMakeLists.txt
@@ -13,6 +13,7 @@ if (LIBXML2_FOUND)
 		INCLUDE_DIRECTORIES
 			${LIBXML2_INCLUDE_DIR}
 		LINK_LIBRARIES
+			elektra-meta
 			${LIBXML2_LIBRARIES}
 		)
 
