add further forgotten link libraries

--- a/src/plugins/augeas/CMakeLists.txt
+++ b/src/plugins/augeas/CMakeLists.txt
@@ -23,6 +23,7 @@ if (LIBAUGEAS_FOUND AND LIBXML2_FOUND)
 				${LIBAUGEAS_INCLUDE_DIR}
 				${LIBXML2_INCLUDE_DIR}
 			LINK_LIBRARIES
+				elektra-meta
 				${LIBAUGEAS_LIBRARIES}
 				${LIBXML2_LIBRARIES}
 			)
