--- a/src/plugins/crypto/crypto_internal.h.in
+++ b/src/plugins/crypto/crypto_internal.h.in
@@ -40,6 +40,9 @@ typedef gcry_cipher_hd_t elektraCryptoHandle;
 // libcrypto (OpenSSL) specific declarations
 #ifdef ELEKTRA_CRYPTO_API_OPENSSL
 
+// TODO use an appropriate type for libcrypto
+typedef unsigned int elektraCryptoHandle;
+
 #endif
 
 #endif
