--- a/src/plugins/ni/CMakeLists.txt
+++ b/src/plugins/ni/CMakeLists.txt
@@ -19,7 +19,9 @@ add_plugin(ni
 
 include_directories(${NI}/include)
 file (GLOB NI_INI_FILES ${NI}/src/tests/*.ini)
-copy_file (${NI_INI_FILES} "${CMAKE_CURRENT_BINARY_DIR}")
+foreach(NI_INI_FILE ${NI_INI_FILES})
+	copy_file (${NI_INI_FILE} "${CMAKE_CURRENT_BINARY_DIR}")
+endforeach()
 
 # testmod_ni mainly tests nickel functions so we need to
 # link against nickel objects
