crypto-plugin: adapt to compile variants

--- a/src/plugins/crypto/CMakeLists.txt
+++ b/src/plugins/crypto/CMakeLists.txt
@@ -1,76 +1,76 @@
-# set default value to CRYPTO_API
-if (NOT DEFINED CRYPTO_API OR CRYPTO_API STREQUAL "")
-	set (CRYPTO_API "gcrypt")
-	message ("Trying to use gcrypt as default crypto API")
-endif (NOT DEFINED CRYPTO_API OR CRYPTO_API STREQUAL "")
+include (LibAddPlugin)
 
 set (ELEKTRA_CRYPTO_API_GCRYPT FALSE)
 set (ELEKTRA_CRYPTO_API_OPENSSL FALSE)
 
-# check if crypto API is available
-if (CRYPTO_API STREQUAL "gcrypt")
-	find_package (LibGcrypt)
-	if (NOT LIBGCRYPT_FOUND)
-		remove_plugin (crypto "libgcrypt development files not found")
-		return ()
-	endif (NOT LIBGCRYPT_FOUND)
-	set (ELEKTRA_CRYPTO_API_GCRYPT TRUE)
-endif (CRYPTO_API STREQUAL "gcrypt")
-
-if (CRYPTO_API STREQUAL "openssl")
-	include (FindPkgConfig)
-	pkg_search_module (OPENSSL openssl)
-	if (NOT OPENSSL_FOUND)
-		remove_plugin (crypto "OpenSSL development files not found")
-		return ()
-	endif (NOT OPENSSL_FOUND)
-	set (ELEKTRA_CRYPTO_API_OPENSSL TRUE)
-endif (CRYPTO_API STREQUAL "openssl")
-
-if (NOT DEFINED ELEKTRA_CRYPTO_API_GCRYPT AND NOT DEFINED ELEKTRA_CRYPTO_API_OPENSSL)
-	message( FATAL_ERROR "You provided an invalid crypto API: ${CRYPTO_API}" )
-endif (NOT DEFINED ELEKTRA_CRYPTO_API_GCRYPT AND NOT DEFINED ELEKTRA_CRYPTO_API_OPENSSL)
-
-# configure build process
-configure_file (
-	"${CMAKE_CURRENT_SOURCE_DIR}/crypto_internal.h.in"
-	"${CMAKE_CURRENT_BINARY_DIR}/crypto_internal.h"
+# base plugin (that does actually nothing on its own)
+add_plugin (crypto
+	SOURCES
+		crypto.h
+		crypto.c
+	INCLUDE_DIRECTORIES
+		${OPENSSL_INCLUDE_DIR}
+	LINK_LIBRARIES
+		${OPENSSL_LIBRARIES}
+	COMPILE_DEFINITIONS
+		ELEKTRA_PLUGIN_NAME=\"crypto\"
 )
 
-install (FILES
-	"${CMAKE_CURRENT_BINARY_DIR}/crypto_internal.h"
-	DESTINATION include/${TARGET_INCLUDE_FOLDER}
-)
+#add_plugintest (crypto)
 
-include_directories ("${CMAKE_CURRENT_BINARY_DIR}")
-include (LibAddPlugin)
+foreach (plugin ${PLUGINS})
 
-if (ELEKTRA_CRYPTO_API_GCRYPT)
-	add_plugin (crypto
-		SOURCES 
-			gcrypt_operations.h
-			gcrypt_operations.c
-			crypto.h
-			crypto.c
-		INCLUDE_DIRECTORIES
-			${LIBGCRYPT_INCLUDE_DIR}
-		LINK_LIBRARIES
-			${LIBGCRYPT_LIBRARIES}
+	# Compile Variant: OpenSSL
+	if (${plugin} MATCHES "crypto_openssl")
+
+		include (FindPkgConfig)
+		pkg_search_module (OPENSSL openssl)
+		if (NOT OPENSSL_FOUND)
+			message ( FATAL_ERROR "OpenSSL development files not found")
+			return ()
+		endif (NOT OPENSSL_FOUND)
+
+		add_plugin (${plugin}
+			SOURCES
+				openssl_operations.h
+				openssl_operations.c
+				crypto.h
+				crypto.c
+			INCLUDE_DIRECTORIES
+				${OPENSSL_INCLUDE_DIR}
+			LINK_LIBRARIES
+				${OPENSSL_LIBRARIES}
+			COMPILE_DEFINITIONS
+				ELEKTRA_PLUGIN_NAME=\"${plugin}\"
+				ELEKTRA_CRYPTO_API_OPENSSL
 		)
-endif (ELEKTRA_CRYPTO_API_GCRYPT)
 
-if (ELEKTRA_CRYPTO_API_OPENSSL)
-	add_plugin (crypto
-		SOURCES 
-			openssl_operations.h
-			openssl_operations.c
-			crypto.h
-			crypto.c
-		INCLUDE_DIRECTORIES
-			${OPENSSL_INCLUDE_DIR}
-		LINK_LIBRARIES
-			${OPENSSL_LIBRARIES}
+	endif (${plugin} MATCHES "crypto_openssl")
+
+	# Compile Variant: libgcrypt
+	if (${plugin} MATCHES "crypto_gcrypt")
+
+		find_package (LibGcrypt)
+		if (NOT LIBGCRYPT_FOUND)
+			message ( FATAL_ERROR "libgcrypt development files not found")
+			return ()
+		endif (NOT LIBGCRYPT_FOUND)
+
+		add_plugin (${plugin}
+			SOURCES
+				gcrypt_operations.h
+				gcrypt_operations.c
+				crypto.h
+				crypto.c
+			INCLUDE_DIRECTORIES
+				${LIBGCRYPT_INCLUDE_DIR}
+			LINK_LIBRARIES
+				${LIBGCRYPT_LIBRARIES}
+			COMPILE_DEFINITIONS
+				ELEKTRA_PLUGIN_NAME=\"${plugin}\"
+				ELEKTRA_CRYPTO_API_GCRYPT
 		)
-endif (ELEKTRA_CRYPTO_API_OPENSSL)
 
-add_plugintest (crypto)
+	endif (${plugin} MATCHES "crypto_gcrypt")
+
+endforeach (plugin)
